feat: Full-stack deployment with Docker, Supabase Auth, Storage
- Add production-ready Dockerfile (multi-stage build)
- Add docker-compose.yml for Coolify deployment
- Add Supabase database client and migrations
- Add JWT authentication with login/register pages
- Add file storage handler (Supabase/local fallback)
- Add health check endpoint for Docker healthcheck
- Rebrand OpenManus to OpenHT throughout codebase
- Add latest AI models (Gemini 3, Claude 4.5, GPT-5, etc.)
- Add image generation models (DALL-E 4, Flux, Midjourney)
- Add suggestion chips and file upload UI to chat
- Update requirements with supabase, PyJWT, bcrypt

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,9 @@ crawl4ai~=0.6.3
 
 huggingface-hub~=0.29.2
 setuptools~=75.8.0
+
+# Full-stack deployment dependencies
+supabase~=2.10.0
+PyJWT~=2.10.1
+python-multipart~=0.0.20
+bcrypt~=4.2.0
